# constexpr

./: .tm_properties  CMakeLists.txt  const.cpp
cmake/: coverage.cmake  pedantic.cmake
include/: .clang-format  constant_wrapper.hpp
tests/: CMakeLists.txt  basic.cpp  basic2.cpp  support.hpp
